# ros2_ws_rasp

Arduino/Servomotor/: Servomotor.ino
Arduino/control_motores/: control_motores.ino
Arduino/controlmotor_pid/: controlmotor_pid.ino
Arduino/read_encoder/: read_encoder.ino
Arduino/set_cero_encoder/: set_cero_encoder.ino
ovcrasp/: CMakeLists.txt  package.xml
ovcrasp/launch/: ovcrasp_enco_mot.launch.py
ovcrasp/src/: encoders_joint_state_pub.cpp  encoders_publisher.cpp  motores_object_pose_sub.cpp  motores_subscriber.cpp  servo_ena_subscriber.cpp
ovcrobot_control/: CMakeLists.txt  package.xml
ovcrobot_control/config/: pid_parameters.yaml
ovcrobot_control/launch/: ovcrobot_pid_launch.py
ovcrobot_control/src/: ovcrobot_PID_Ctrl.cpp  ovcrobot_targets.cpp
ovcrobot_description/: CMakeLists.txt  package.xml
ovcrobot_description/launch/: robot_state_publisher.launch.py
ovcrobot_description/meshes/gripper_meshes/: L1_Link.STL  L1_Link_Fix.STL  L1_Link_V1.STL  L1_Link_V2.STL  L1_Link_V3.STL  L2_Link_V1.STL  L2_Link_V2.STL  L2_Link_V3.STL  L3_Link_V1.STL  L3_Link_V2.STL  L3_Link_V3.STL  base_link.STL
ovcrobot_description/meshes/ovcrobot/: L1_Link.STL  L2_Link.STL  L3_Link.STL  L4_Link.STL  L5_Link.STL  L6_Link.STL  base_link.STL
ovcrobot_description/rviz/: ovcrobot_description.rviz
ovcrobot_description/urdf/: ovcrobotv3_copp.urdf
ovcrobot_description/urdf/control/: gazebo_sim_ros2_control.urdf.xacro  ovcrobot_ros2_control.urdf.xacro
ovcrobot_interfaces/: CMakeLists.txt  package.xml
ovcrobot_interfaces/action/: SetJointTarget.action
ovcrobot_moveit_config/: CMakeLists.txt  package.xml
ovcrobot_moveit_config/config/: launch.rviz  ompl_planning.yaml
ovcrobot_moveit_config/config/ovcrobot/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ovcrobot.srdf  ros2_controllers.yaml  ros2_controllers_template.yaml
ovcrobot_moveit_config/launch/: demo.launch.py  load_ros2_controllers.launch.py  move_group.launch.py  moveit_planning_execution.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ovcrobot_moveit_config/rviz/: move_group.rviz
sim_ros2_interface/meta/: interfaces.txt
